# PhotoBatch

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  aplication.cpp
includes/: argumentParser.hpp  mode.hpp  utility.hpp
src/: CMakeLists.txt  argumentParser.cpp  mode.cpp  utility.cpp
